[metadata]
name = koinlyxp
version = attr: koinlyxp.__version__
description = Koinly portfolio and transaction data exporter
long_description = Export cryptocurrency portfolio and transaction data from koinly.io
author = Marlon Paulse
author_email = mpaulse@gmail.com
license = MIT License
license_file = LICENSE
url = https//github.com/mpaulse/koinlyxp
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial

[options]
packages = find_namespace:
python_requires = >=3.9
install_requires =
    requests

[options.entry_points]
console_scripts =
    koinlyxp = koinlyxp:run
